stopped the main image from overflowing (about time)

--- a/style.css
+++ b/style.css
@@ -64,6 +64,10 @@ main {
   padding: 20px;
 }
 
+.main-image {
+  width: 100%;
+}
+
 h1 {
   margin-top: 0;
 }
